tests/src/frontend/typechecking/exhaustiveness/invalid/tuple_nested_boolean_wildcard3.sk
fun test(): String {
  (1, (true, true)) match {
  | (_, (_, true)) -> "Fail\n"
  | (_, (true, _)) -> "Fail\n"
  }
}
